# PyJS

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
docs/: architecture.md  ecmascript-status.md  plugins.md  test-list.txt
pyjs/: __init__.py  builtins_advanced.py  builtins_core.py  builtins_object.py  builtins_promise.py  builtins_typed.py  cli.py  colors.py  completer.py  core.py  demo.py  environment.py  exceptions.py  generators.py  inspect_val.py  lexer.py  modules.py  parser.py  plugin.py  runtime.py  trace.py  values.py
pyjs/plugins/: __init__.py  assert_plugin.py  child_process.py  console_ext.py  crypto_plugin.py  events.py  fetch.py  fs.py  path_plugin.py  process.py  storage.py  util_plugin.py
tests/: test_pyjs.py
